# Fraud-Detection

./: .gitignore  README.md  app.py  main.py  pyproject.toml  readme.md  replit.md  requirements.txt  setup.py
.streamlit/: config.toml
