[project]
name = "fraud-detection"
version = "0.1.0"
description = "Fraud Detection & Anomaly Detection System using Machine Learning"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.1",
]
